tests/ui/queue_read_slots.stderr
error[E0502]: cannot borrow `slots[_]` as immutable because it is also borrowed as mutable
  --> tests/ui/queue_read_slots.rs:16:14
   |
15 |     Queue::create(queue.as_ref(), &mut slots, &Default::default()).unwrap();
   |                                   ---------- mutable borrow occurs here
16 |     use_slot(&slots[0]);
   |              ^^^^^^^^^ immutable borrow occurs here
17 | }
   | - mutable borrow might be used here, when `pinned` is dropped and runs the `Drop` code for type `QueueContext`
